<resources>
    <string name="app_name">Stations</string>

    <string name="start_typing_and_choose_from_list">Start typing and choose from list…</string>
    <string name="change">Change</string>
    <string name="station_1">Station 1:</string>
    <string name="station_2">Station 2:</string>
    <string name="name">Name:</string>
    <string name="city">City:</string>
    <string name="region">Region:</string>
    <string name="country">Country:</string>
    <string name="calculate_distance">Calculate distance</string>
    <string name="distance_between_stations">Distance between stations:</string>
    <string name="distance_value">%.2f km</string>
    <string name="data_out_of_date_error">The data in the application is out of date! Check Internet connection and try again…</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="choose_stations_error">Pick stations first!</string>
    <string name="unknown_error">An unknown error has occurred! Error code: %d</string>
    <string name="wait_please">Wait please…</string>
    <string name="arrow_left"><![CDATA[<]]>-</string>
    <string name="arrow_right">-<![CDATA[>]]></string>
</resources>