<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/dialog_data_out_of_date_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/data_out_of_date_error"
        android:textAlignment="center"
        android:textColor="@color/gray_light"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dialog_data_out_of_date_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_small"
        android:background="@drawable/bg_button_enabled"
        android:minWidth="@dimen/button_width"
        android:paddingHorizontal="@dimen/margin_regular"
        android:soundEffectsEnabled="false"
        android:text="@string/cancel"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_data_out_of_date_retry_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_data_out_of_date_message" />

    <Button
        android:id="@+id/dialog_data_out_of_date_retry_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/margin_small"
        android:background="@drawable/bg_button_enabled"
        android:minWidth="@dimen/button_width"
        android:paddingHorizontal="@dimen/margin_regular"
        android:soundEffectsEnabled="false"
        android:text="@string/retry"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_regular"
        app:layout_constraintBottom_toBottomOf="@id/dialog_data_out_of_date_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_data_out_of_date_cancel_button"
        app:layout_constraintTop_toTopOf="@id/dialog_data_out_of_date_cancel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
